--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -6,6 +6,14 @@ test:
   host: localhost
   database: vis_test
 
+# set these environment variables on your staging server
+staging:
+  host: <%= ENV['MONGOID_HOST'] %>
+  port: <%= ENV['MONGOID_PORT'] %>
+  username: <%= ENV['MONGOID_USERNAME'] %>
+  password: <%= ENV['MONGOID_PASSWORD'] %>
+  database: <%= ENV['MONGOID_DATABASE'] %>
+
 # set these environment variables on your prod server
 production:
   host: <%= ENV['MONGOID_HOST'] %>
