--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -8,20 +8,16 @@ test:
 
 # set these environment variables on your staging server
 staging:
-  host: <%= ENV['MONGOID_HOST'] %>
-  port: <%= ENV['MONGOID_PORT'] %>
-  username: <%= ENV['MONGOID_USERNAME'] %>
-  password: <%= ENV['MONGOID_PASSWORD'] %>
-  database: <%= ENV['MONGOID_DATABASE'] %>
+  host: localhost
+  database: vis_staging
+
 
 # set these environment variables on your prod server
 production:
-  host: <%= ENV['MONGOID_HOST'] %>
-  port: <%= ENV['MONGOID_PORT'] %>
-  username: <%= ENV['MONGOID_USERNAME'] %>
-  password: <%= ENV['MONGOID_PASSWORD'] %>
-  database: <%= ENV['MONGOID_DATABASE'] %>
-  # slaves:
+  host: localhost
+  database: vis_production
+
+
   #   - host: slave1.local
   #     port: 27018
   #   - host: slave2.local
