Alterando jobs.yml para verificar production.

--- a/config/jobs.yml
+++ b/config/jobs.yml
@@ -4,6 +4,6 @@ s3:
 
 jobs:
   - interval: 1d
-    db: mongodb://:@localhost:27017/vis_staging
-    location: redu-backup/staging
+    db: mongodb://:@localhost:27017/vis_production
+    location: redu-backup/production
     versions: 100
